--- a/Frame.html
+++ b/Frame.html
@@ -454,8 +454,8 @@
          </section>
         <!-- end today -->
         <!-- start Join -->
-         <section id="Join">
-          <div id="small-join">
+         <section class="Join">
+          <div class="small-join">
             <h2>Join With Over 100K Members</h2>
             <p>
               But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers <br>
@@ -472,17 +472,21 @@
               <div id="information">
                 <h2>Get In Touch</h2>
                 <form action="">
-                  <input type="text" name="Name" placeholder="Your Name" height="46px"><br>
-                  <input type="email" name="Email" placeholder="Your Email" height="46px"><br>
-                  <input type="text" name="Phone" placeholder="Your Phone" height="46px"><br>
-                  <textarea name="" id="" cols="30" rows="10" placeholder="Write a Message" style="margin: 0 0 15px;"></textarea><br>
-                  <input type="submit">
+                  <input class="form" type="text" name="Your Name" placeholder="Your Name" height="46px"><br>
+                  <input class="form" type="email" name="Your Email" placeholder="Your Email" height="46px"><br>
+                  <input class="form" type="text" name="Your Phone" placeholder="Your Phone" height="46px"><br>
+                  <textarea name="Message" cols="30" rows="10" placeholder="Write a Message" style="margin: 0 0 15px;"></textarea><br>
+                  <input id="submit" type="submit" value="Sebd Message">
                 </form>
               </div>
               <div id="information-example">
                 <li>
                 <span>EMAIL</span><br>
                 probootstrap@gmail.com
+                </li>
+                <li>
+                <span>FAX</span><br>
+                +30 976 1382 9922
                 </li>
                 <li>
                   <span>PHONE</span><br>
@@ -498,5 +502,23 @@
             </div>
          </section>
         <!-- end sebd message -->
+        <!-- start footer -->
+         <footer class="Join">
+          <div class="small-join">
+            <div id="footer-links">
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/reza-mazarei-b90a2a398/"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+            <div id="footer-text">
+              <p>© 2019 Frame. All Rights Reserved. <br>
+                Designed & <a href="https://uicookies.com/bootstrap-html-templates/">Bootstrap templates</a> by uiCookies <br>
+                Demo Images by <a href="https://unsplash.com/">Unsplash</a> 
+              </p>
+            </div>
+          </div>
+         </footer>
+        <!-- end footer -->
     </body>
 </html>
